--- a/Readme.me
+++ b/Readme.me
@@ -1,5 +1,5 @@
 
-#### 💾**Dashboard-Admin in Reactjs**
+#### 💾**API- ECOMMERCE **
                                                       
 
 
@@ -7,8 +7,24 @@
 ## 💻**Tecnologias**
 Esse projeto foi desenvolvido com as seguintes tecnologias:
 
-   - Reactjs
-   - Javascript
-   - Html/Css
+   -Javascript
+   - Node.Js
+   - Express
+   - MongoDB
+   
+
+ ## 📝**Projeto**
+
+Esta API tem como objetivo cadastrar usuários ultilizando e-mail e senha. O sistema possui uma verificação e atenticação de admin e clientes dos usuários ultilizando token e envio de e-mail caso o usuário esqueça a senha, possui também validações para carrinho, produtos e entrega.
+
+## 🔖 **Desenvolvimento**
+
+O projeto foi divido em 3 partes:
+
+   - Estrutura e cadastro
+   - Autenticação
+   - Recuperação de senha ultilizando NodeMailer
+   -Carrinho
+   -Integração entrega
 
 
